# nixman

./: Cargo.toml  README.md  flake.nix  shell.nix
data/: multi_match_template.json  request_template.json  wildcard_template.json
src/: main.rs  request.rs  response.rs
