[package]
name = "nixman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.40"
derivative = "2.2.0"
