[package]
name = "nixman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.40"
derivative = "2.2.0"
reqwest = { version = "0.11.2", features = ["blocking"] }
regex = "1.4.5"
cursive = "0.16.3"
lazy_static = "1.4.0"
jsonxf = "1.0.2"
